namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: java-app
  labels:
    name: java-app
